# DreamForge

./: .env.example  .gitignore  README.md  pyproject.toml
docs/api/: short-term-memory-contract.md
docs/design/: 2026-07-15-dream-memory-architecture.md
docs/superpowers/plans/: 2026-07-15-dream-foundation.md  2026-07-15-internship-pull-source.md  2026-07-16-readme-rewrite.md
docs/superpowers/specs/: 2026-07-15-internship-pull-source-design.md  2026-07-16-readme-rewrite-design.md
src/dream/: __init__.py  api.py  artifacts.py  config.py  events.py  ledger.py  processed_events.py  reports.py  rollback.py  scheduler.py  scope.py  service.py  snapshots.py  source_sync.py
src/dream/curators/: __init__.py  ai.py  llm_backend.py  protocol.py  registry.py  user.py
src/dream/hermes_compat/: curator_prompts.py  prompts.py
src/dream/managers/: __init__.py  decision_cards.py  memory.py
src/dream/review/: __init__.py  backend.py  classifier.py  llm_backend.py  models.py  orchestrator.py
src/dream/sources/: __init__.py  internship.py
tests/: __init__.py  source_helpers.py  test_api_e2e.py  test_config.py  test_curators.py  test_ledger.py  test_package.py  test_processed_events.py  test_review_application.py  test_scheduler.py  test_scope.py  test_service_due_curators.py  test_snapshots.py  test_source_sync.py  test_source_worker.py
tests/curators/: __init__.py  test_llm_backend.py
tests/review/: __init__.py  test_llm_backend.py  test_orchestrator.py
tests/sources/: __init__.py  test_internship.py
