[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "dream-memory-service"
version = "0.1.0"
description = "Hermes-compatible background memory refinement service"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.104.0,<1",
  "httpx>=0.28,<1",
  "openai==2.24.0",
  "pydantic>=2.13,<3",
  "uvicorn[standard]>=0.24.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff==0.15.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
